--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "desafio-angular",
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -21,24 +22,49 @@
     "@angular/platform-server": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.2",
+    "@popperjs/core": "^2.11.8",
+    "eslint": "^9.0.0",
     "express": "^4.18.2",
+    "json-server": "^1.0.0-alpha.23",
+    "lodash": "^4.17.21",
+    "lodash-id": "^0.14.1",
+    "lowdb": "^7.0.1",
+    "prettier": "^3.2.5",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "uuid": "^9.0.1",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
+    "@angular-builders/custom-webpack": "17.0.1",
     "@angular-devkit/build-angular": "^17.3.2",
+    "@angular-eslint/builder": "17.3.0",
+    "@angular-eslint/eslint-plugin": "17.3.0",
+    "@angular-eslint/eslint-plugin-template": "17.3.0",
+    "@angular-eslint/schematics": "17.3.0",
+    "@angular-eslint/template-parser": "17.3.0",
     "@angular/cli": "^17.3.2",
-    "@angular/compiler-cli": "^17.3.0",
-    "@types/express": "^4.17.17",
+    "@angular/compiler-cli": "^17.3.1",
+    "@types/eslint": "^8",
     "@types/jasmine": "~5.1.0",
-    "@types/node": "^18.18.0",
+    "@types/lodash": "^4",
+    "@types/node": "^20.12.5",
+    "@types/uuid": "^9",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import-helpers": "^1.3.1",
+    "eslint-plugin-prettier": "^5.1.3",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.4.2"
-  }
+    "prettier": "^3.2.5",
+    "style-loader": "^3.3.1",
+    "typescript": "~5.3.2"
+  },
+  "packageManager": "yarn@4.1.1"
 }
