--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.2",
     "@popperjs/core": "^2.11.8",
+    "@types/express": "^4.17.21",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "eslint": "^9.0.0",
     "express": "^4.18.2",
     "json-server": "^1.0.0-alpha.23",
@@ -65,6 +68,5 @@
     "prettier": "^3.2.5",
     "style-loader": "^3.3.1",
     "typescript": "~5.3.2"
-  },
-  "packageManager": "yarn@4.1.1"
+  }
 }
