--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/ssr": "^17.3.2",
     "@popperjs/core": "^2.11.8",
     "@types/express": "^4.17.21",
+    "angular-cli-ghpages": "2.0.0-beta.2",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "eslint": "^9.0.0",
