--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@angular-eslint/template-parser": "17.3.0",
     "@angular/cli": "^17.3.2",
     "@angular/compiler-cli": "^17.3.1",
+    "@babel/plugin-syntax-import-attributes": "^7.24.1",
     "@types/eslint": "^8",
     "@types/jasmine": "~5.1.0",
     "@types/lodash": "^4",
